--- a/css/menu.css
+++ b/css/menu.css
@@ -1,3 +1,167 @@
+/*! minireset.css v0.0.6 | MIT License | github.com/jgthms/minireset.css */
+html, body, p, ol, ul, li, dl, dt, dd, blockquote, figure, fieldset, legend, textarea, pre, iframe, hr, h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+  padding: 0;
+}
 
+h1, h2, h3, h4, h5, h6 {
+  font-size: 100%;
+  font-weight: normal;
+}
+
+ul {
+  list-style: none;
+}
+
+button, input, select {
+  margin: 0;
+}
+
+html {
+  box-sizing: border-box;
+}
+
+*, *::before, *::after {
+  box-sizing: inherit;
+}
+
+img, video {
+  height: auto;
+  max-width: 100%;
+}
+
+iframe {
+  border: 0;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+td, th {
+  padding: 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: Shrikhand, "cursive", sans-serif;
+}
+
+a, li, p, span {
+  font-family: Roboto, sans-serif;
+}
+
+a {
+  text-decoration: none;
+  color: #000;
+}
+
+.logo {
+  display: flex;
+  justify-content: center;
+  padding: 15px 0 10px;
+}
+
+.logo {
+  justify-content: flex-end;
+  flex-direction: row-reverse;
+}
+.logo img {
+  padding-left: 40px;
+}
+.logo a {
+  display: flex;
+  align-items: center;
+  padding-left: 10px;
+  cursor: pointer;
+}
+
+.header_menu {
+  -webkit-border-top-left-radius: 20px;
+  -webkit-border-top-right-radius: 20px;
+  -moz-border-radius-topleft: 20px;
+  -moz-border-radius-topright: 20px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  display: flex;
+  justify-content: space-between;
+  font-size: 18px;
+  padding: 20px;
+  background-color: rgb(243, 243, 243);
+}
+
+.menu {
+  display: flex;
+  padding: 20px;
+  flex-direction: column;
+  background-color: rgb(243, 243, 243);
+}
+.menu .categorie_menu {
+  padding-bottom: 10px;
+}
+.menu .categorie_menu span {
+  border-bottom: 3px solid #99E2D0;
+}
+.menu .card_menu {
+  display: flex;
+  padding: 5px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  background-color: white;
+  margin-bottom: 10px;
+  align-items: flex-end;
+  justify-content: space-between;
+}
+.menu .card_menu .plat {
+  font-weight: bold;
+}
+.menu .card_menu .accompagnement {
+  font-size: 14px;
+}
+.menu .card_menu .prix {
+  font-weight: bold;
+  font-size: 14px;
+}
+
+.commander {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 30px 0 40px 0;
+}
+.commander span {
+  padding: 10px 40px;
+  border: 2px;
+  border-radius: 50px;
+  color: white;
+  background: linear-gradient(354deg, rgb(147, 86, 220) 0%, rgb(255, 121, 218) 100%);
+  box-shadow: 0 5px 10px rgb(185, 185, 185);
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  background-color: #353535;
+  color: white;
+}
+footer h2 {
+  padding: 20px;
+}
+footer ul {
+  padding-bottom: 30px;
+}
+footer ul li {
+  padding: 0 20px;
+  gap: 10px;
+}
+footer ul li .fa-solid {
+  padding-right: 10px;
+}
+footer ul li a {
+  text-decoration: none;
+  color: white;
+}
 
 /*# sourceMappingURL=menu.css.map */
