--- a/css/style.css
+++ b/css/style.css
@@ -190,12 +190,12 @@ a {
 .card_restaut .photo_restaut {
   width: 100%;
   height: 75%;
-  -webkit-border-radius: 15px;
-  -webkit-border-bottom-right-radius: 0;
-  -moz-border-radius: 15px;
-  -moz-border-radius-bottomright: 0;
-  border-radius: 15px;
-  border-bottom-right-radius: 0;
+  -webkit-border-top-left-radius: 15px;
+  -webkit-border-top-right-radius: 15px;
+  -moz-border-radius-topleft: 15px;
+  -moz-border-radius-topright: 15px;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
   display: block;
   object-fit: cover;
 }
@@ -211,14 +211,22 @@ a {
 
 .footer_card {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  align-content: flex-start;
+  flex-direction: column;
   padding: 10px 15px;
 }
 .footer_card .titre_card {
   font-weight: bold;
 }
-.footer_card .fa-heart:hover {
+
+.fa-heart {
+  position: absolute;
+  display: flex;
+  justify-content: flex-end;
+  right: 15px;
+  top: 210px;
+}
+.fa-heart .fa-heart:hover {
   color: #9356DC;
 }
 
