Changement des chemin d'image, ajout des ombre sur le menu test

--- a/css/menu.css
+++ b/css/menu.css
@@ -112,16 +112,19 @@ a {
   margin-bottom: 10px;
   align-items: flex-end;
   justify-content: space-between;
+  box-shadow: 0 5px 10px rgb(185, 185, 185);
 }
 .menu .card_menu .plat {
   font-weight: bold;
+  font-size: 14px;
 }
 .menu .card_menu .accompagnement {
-  font-size: 14px;
+  font-size: 12px;
 }
 .menu .card_menu .prix {
   font-weight: bold;
-  font-size: 14px;
+  font-size: 12px;
+  padding-right: 5px;
 }
 
 .commander {
