--- a/css/menu.css
+++ b/css/menu.css
@@ -62,47 +62,52 @@ a {
   padding: 15px 0 10px;
 }
 
-.logo {
-  justify-content: flex-end;
-  flex-direction: row-reverse;
+body {
+  background-color: rgb(243, 243, 243);
 }
-.logo img {
+
+header {
+  background-color: white;
+}
+header .logo img {
   padding-left: 40px;
 }
-.logo a {
+header .logo a {
   display: flex;
   align-items: center;
   padding-left: 10px;
   cursor: pointer;
 }
 
-.header_menu {
+section {
+  position: relative;
+  top: -25px;
+  background-color: rgb(243, 243, 243);
   -webkit-border-top-left-radius: 20px;
   -webkit-border-top-right-radius: 20px;
   -moz-border-radius-topleft: 20px;
   -moz-border-radius-topright: 20px;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
+}
+section .header_menu {
   display: flex;
   justify-content: space-between;
   font-size: 18px;
   padding: 20px;
-  background-color: rgb(243, 243, 243);
 }
-
-.menu {
+section .menu {
   display: flex;
   padding: 20px;
   flex-direction: column;
-  background-color: rgb(243, 243, 243);
 }
-.menu .categorie_menu {
+section .menu .categorie_menu {
   padding-bottom: 10px;
 }
-.menu .categorie_menu span {
+section .menu .categorie_menu span {
   border-bottom: 3px solid #99E2D0;
 }
-.menu .card_menu {
+section .menu .card_menu {
   display: flex;
   padding: 5px;
   -webkit-border-radius: 10px;
@@ -114,33 +119,35 @@ a {
   justify-content: space-between;
   box-shadow: 0 5px 10px rgb(185, 185, 185);
 }
-.menu .card_menu .plat {
+section .menu .card_menu .plat {
   font-weight: bold;
   font-size: 14px;
 }
-.menu .card_menu .accompagnement {
+section .menu .card_menu .accompagnement {
   font-size: 12px;
 }
-.menu .card_menu .prix {
+section .menu .card_menu .prix {
   font-weight: bold;
   font-size: 12px;
   padding-right: 5px;
 }
-
-.commander {
+section .commander {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
   padding: 30px 0 40px 0;
 }
-.commander span {
+section .commander span {
   padding: 10px 40px;
   border: 2px;
   border-radius: 50px;
   color: white;
   background: linear-gradient(354deg, rgb(147, 86, 220) 0%, rgb(255, 121, 218) 100%);
   box-shadow: 0 5px 10px rgb(185, 185, 185);
+}
+section .commander:hover {
+  opacity: 0.7;
 }
 
 footer {
@@ -165,6 +172,32 @@ footer ul li .fa-solid {
 footer ul li a {
   text-decoration: none;
   color: white;
+}
+
+@media screen and (min-width: 1025px) {
+  .img_header img {
+    height: 500px;
+    width: 100%;
+    flex-grow: 1;
+  }
+  section {
+    top: -40px;
+  }
+  section .menu {
+    flex-direction: row;
+    justify-content: space-around;
+  }
+  section .menu .card_menu {
+    margin-bottom: 20px;
+    width: 350px;
+  }
+  footer h2 {
+    text-align: center;
+  }
+  footer ul {
+    display: flex;
+    justify-content: space-around;
+  }
 }
 
 /*# sourceMappingURL=menu.css.map */
