--- a/sass/menu.scss
+++ b/sass/menu.scss
@@ -5,18 +5,16 @@ body {
 header {
     background-color: white;
     .logo {
-        img {
-            padding-left: 40px;
-        }
+        position: relative;
         a {
-            display: flex;
-            align-items: center;
-            padding-left: 10px;
             cursor: pointer;
+            position: absolute;
+            left: 10px;
+            top: 20px;
         }    
     }
 }
-section {
+main {
     position: relative;
     top: -25px;
     background-color: rgb(243, 243, 243);
@@ -69,10 +67,9 @@ section {
         }
     }
     .commander {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
+        display: block;
+        margin: 0 auto;
+        width: 210px;
         padding:30px 0 40px 0;
         span {
             padding:10px 40px;
@@ -81,10 +78,11 @@ section {
             color: white;
             background: linear-gradient(354deg, rgba(147,86,220,1) 0%, rgba(255,121,218,1) 100%);
             box-shadow: 0 5px 10px rgb(185, 185, 185);
+            &:hover {
+                background: linear-gradient(354deg, rgb(158, 106, 221) 0%, rgb(255, 145, 224) 100%);
+            }
         }
-        &:hover {
-            opacity: 0.7;
-        }
+
     }
 }
 
@@ -93,31 +91,35 @@ footer {
     flex-direction: column;
     background-color: #353535;
     color: white;
-    h2 {
+    a {
+        color: white;
         padding: 20px;
+        text-align: center;
+        font-family: Shrikhand, "cursive", sans-serif;
     }
-    ul {
-        padding-bottom: 30px;
-        li {
-            padding: 0 20px;
-            gap: 10px;
-            .fa-solid {
-                padding-right: 10px;
-            }
-            a {
-                text-decoration: none;
-                color: white;
+        ul {
+            padding-bottom: 30px;
+            li {
+                padding: 0 20px;
+                gap: 10px;
+                .fa-solid {
+                    padding-right: 10px;
+                }
+                a {
+                    text-decoration: none;
+                    color: white;
+                }
             }
         }
-    }
 }
 
 @media screen and (min-width: 1025px) {    
     .img_header {
         img {
-            height: 500px;
+            max-height: 500px;
+            max-width: 100%;
+            object-fit: cover;
             width: 100%;
-            flex-grow: 1;
         }
     }
     section {
