--- a/sass/style.scss
+++ b/sass/style.scss
@@ -32,10 +32,9 @@
     }
 }
 .explorer {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
+    display: block;
+    margin: 0 auto;
+    width: 210px;
     padding:30px 0 40px 0;
     span {
         padding:15px;
@@ -44,10 +43,11 @@
         color: white;
         background: linear-gradient(354deg, rgba(147,86,220,1) 0%, rgba(255,121,218,1) 100%);
         box-shadow: 0 5px 10px rgb(185, 185, 185);
+        &:hover {
+            background: linear-gradient(354deg, rgb(158, 106, 221) 0%, rgb(255, 145, 224) 100%);
+        }
     }
-    &:hover {
-        opacity: 0.7;
-    }
+
 }
 .fonctionnement {
     padding: 20px;
@@ -113,6 +113,10 @@
         padding: 20px 0 20px 0;
         font-weight: 900;
         font-size: 24px;
+        h1 {
+            font-family: "Roboto", sans-serif;
+            font-weight: bold;
+        }
     }
 }
 .contenaire_restau {
@@ -174,8 +178,11 @@ footer {
     flex-direction: column;
     background-color: #353535;
     color: white;
-    h2 {
+    a {
+        color: white;
         padding: 20px;
+        text-align: center;
+        font-family: Shrikhand, "cursive", sans-serif;
     }
     ul {
         padding-bottom: 30px;
