--- a/css/menu.css
+++ b/css/menu.css
@@ -147,6 +147,7 @@ main .commander span {
 }
 main .commander span:hover {
   background: linear-gradient(354deg, rgb(158, 106, 221) 0%, rgb(255, 145, 224) 100%);
+  box-shadow: 0 5px 10px rgb(146, 146, 146);
 }
 
 footer {
