--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,62 @@ a {
   padding: 15px 0 10px;
 }
 
+.loader {
+  position: fixed;
+  display: grid;
+  place-items: center;
+  background-color: whitesmoke;
+  height: 100vh;
+  inset: 0;
+  z-index: 1;
+  animation: fond 200ms forwards;
+  animation-delay: 3s;
+  opacity: 0.9;
+  transform-origin: top;
+}
+.loader::after {
+  content: "";
+  border: 16px solid white;
+  width: 120px;
+  height: 120px;
+  border-top-color: #FF79DA;
+  border-bottom-color: #FF79DA;
+  border-radius: 50%;
+  animation: chargeur 3s linear forwards;
+}
+
+@keyframes fond {
+  to {
+    transform: scale(0);
+  }
+}
+@keyframes chargeur {
+  0% {
+    transform: rotate(0deg) scale(1);
+    border-top-color: #FF79DA;
+    border-bottom-color: #FF79DA;
+  }
+  25% {
+    border-top-color: #99E2D0;
+    border-bottom-color: #99E2D0;
+  }
+  50% {
+    transform: rotate(360deg) scale(1.15);
+    border-top-color: #FF79DA;
+    border-bottom-color: #FF79DA;
+  }
+  75% {
+    border-top-color: #9356DC;
+    border-bottom-color: #9356DC;
+    opacity: 0.7;
+  }
+  100% {
+    transform: rotate(720deg) scale(1);
+    border-top-color: #FF79DA;
+    border-bottom-color: #FF79DA;
+    opacity: 0;
+  }
+}
 .logo {
   display: flex;
   justify-content: center;
@@ -112,6 +168,7 @@ a {
 }
 .explorer span:hover {
   background: linear-gradient(354deg, rgb(158, 106, 221) 0%, rgb(255, 145, 224) 100%);
+  box-shadow: 0 5px 10px rgb(146, 146, 146);
 }
 
 .fonctionnement {
@@ -221,26 +278,33 @@ a {
   color: #226151;
   font-weight: bold;
 }
-
-.footer_card {
+.contenaire_restau .card_restau .footer_card {
   display: flex;
   align-content: flex-start;
   flex-direction: column;
   padding: 10px 15px;
 }
-.footer_card .titre_card {
+.contenaire_restau .card_restau .footer_card .titre_card {
   font-weight: bold;
 }
-
-.fa-heart {
+.contenaire_restau .card_restau .fa-heart {
   position: absolute;
   display: flex;
   justify-content: flex-end;
   right: 15px;
   top: 210px;
 }
-.fa-heart .fa-heart:hover {
-  color: #9356DC;
+.contenaire_restau .card_restau .fa-solid {
+  color: transparent;
+  background-image: linear-gradient(354deg, rgb(158, 106, 221) 0%, rgb(255, 145, 224) 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  opacity: 0;
+  transition: all 200ms;
+}
+.contenaire_restau .card_restau .fa-solid:hover {
+  opacity: 1;
+  transform: scale(1.15);
 }
 
 footer {
