--- a/sass/menu.scss
+++ b/sass/menu.scss
@@ -80,6 +80,7 @@ main {
             box-shadow: 0 5px 10px rgb(185, 185, 185);
             &:hover {
                 background: linear-gradient(354deg, rgb(158, 106, 221) 0%, rgb(255, 145, 224) 100%);
+                box-shadow: 0 5px 10px rgb(146, 146, 146);
             }
         }
 
