--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,61 @@
 @import "libs/reset.scss";
 
+.loader {
+    position:fixed;
+    display: grid;
+    place-items: center;
+    background-color: whitesmoke;
+    height: 100vh;
+    inset: 0;
+    z-index: 1;
+    animation: fond 200ms forwards;
+    animation-delay: 3s;
+    opacity: 0.9;
+    transform-origin: top;
+    &::after {
+        content: "";
+        border: 16px solid white;
+        width: 120px;
+        height: 120px;
+        border-top-color: #FF79DA;
+        border-bottom-color: #FF79DA;
+        border-radius: 50%;
+        animation: chargeur 3s linear forwards;
+    }
+  }
+  @keyframes fond {
+    to {
+       transform: scale(0); 
+    }
+  }
+  
+  @keyframes chargeur {
+    0% {
+      transform: rotate(0deg) scale(1);
+      border-top-color: #FF79DA;
+      border-bottom-color: #FF79DA;
+    }
+    25% {
+      border-top-color: #99E2D0;
+      border-bottom-color: #99E2D0;
+    }
+    50% {
+      transform: rotate(360deg) scale(1.15);
+      border-top-color: #FF79DA;
+      border-bottom-color: #FF79DA;
+    }
+    75% {
+      border-top-color: #9356DC;
+      border-bottom-color: #9356DC;
+      opacity: 0.7;
+    }
+    100% {
+      transform: rotate(720deg) scale(1);
+      border-top-color: #FF79DA;
+      border-bottom-color: #FF79DA;
+      opacity: 0;
+    }
+  }
 .logo {
     display: flex;
     justify-content: center;
@@ -45,6 +101,7 @@
         box-shadow: 0 5px 10px rgb(185, 185, 185);
         &:hover {
             background: linear-gradient(354deg, rgb(158, 106, 221) 0%, rgb(255, 145, 224) 100%);
+            box-shadow: 0 5px 10px rgb(146, 146, 146);
         }
     }
 
@@ -152,25 +209,34 @@
             color: #226151;
             font-weight: bold;
         }
-    }
-}
-.footer_card {
-    display: flex;
-    align-content: flex-start;
-    flex-direction: column;
-    padding: 10px 15px;
-    .titre_card {
-        font-weight: bold;
-    }
-}
-.fa-heart {
-    position: absolute;
-    display: flex;
-    justify-content: flex-end;
-    right: 15px;
-    top: 210px;
-    .fa-heart:hover {
-        color: #9356DC;
+        .footer_card {
+            display: flex;
+            align-content: flex-start;
+            flex-direction: column;
+            padding: 10px 15px;
+            .titre_card {
+                font-weight: bold;
+            }
+        }
+        .fa-heart {
+            position: absolute;
+            display: flex;
+            justify-content: flex-end;
+            right: 15px;
+            top: 210px;
+        }
+        .fa-solid {
+            color: transparent;
+            background-image: linear-gradient(354deg, rgb(158, 106, 221) 0%, rgb(255, 145, 224) 100%);
+            background-clip: text;
+            -webkit-background-clip: text;
+            opacity: 0;
+            transition: all 200ms;
+            &:hover {
+                opacity: 1;
+                transform: scale(1.15);
+            }
+        }
     }
 }
 footer {
@@ -201,6 +267,9 @@ footer {
 }
 
 @media screen and (min-width: 481px) {
+    // .loader {
+    //     margin-left: 43%;
+    // }
     .fonctionnement {
         .titre_fonction {
             display: flex;
@@ -228,6 +297,9 @@ footer {
     }
 }
 @media screen and (min-width: 1025px) {
+    // .loader {
+    //     margin-left: 47%;
+    // }
     .contenaire_restau {
         flex-direction: unset;
         .card_restau {
