--- a/css/menu.css
+++ b/css/menu.css
@@ -72,7 +72,7 @@ header {
 header .logo {
   position: relative;
 }
-header .logo a {
+header .logo .back {
   cursor: pointer;
   position: absolute;
   left: 10px;
@@ -96,6 +96,22 @@ main .header_menu {
   font-size: 18px;
   padding: 20px;
 }
+main .header_menu .fa-regular {
+  position: absolute;
+  right: 20px;
+}
+main .header_menu .fa-solid {
+  color: transparent;
+  background-image: linear-gradient(354deg, rgb(158, 106, 221) 0%, rgb(255, 145, 224) 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  opacity: 0;
+  transition: all 200ms;
+}
+main .header_menu .fa-solid:hover {
+  opacity: 1;
+  transform: scale(1.15);
+}
 main .menu {
   display: flex;
   padding: 20px;
@@ -118,6 +134,20 @@ main .menu .card_menu {
   align-items: flex-end;
   justify-content: space-between;
   box-shadow: 0 5px 10px rgb(185, 185, 185);
+  animation: apparition 1s;
+  animation-fill-mode: both;
+}
+main .menu .card_menu:nth-child(1) {
+  animation-delay: 100ms;
+}
+main .menu .card_menu:nth-child(2) {
+  animation-delay: 200ms;
+}
+main .menu .card_menu:nth-child(3) {
+  animation-delay: 300ms;
+}
+main .menu .card_menu:nth-child(4) {
+  animation-delay: 400ms;
 }
 main .menu .card_menu .plat {
   font-weight: bold;
@@ -131,11 +161,22 @@ main .menu .card_menu .prix {
   font-size: 12px;
   padding-right: 5px;
 }
+@keyframes apparition {
+  0% {
+    transform: translateY(50%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
 main .commander {
   display: block;
   margin: 0 auto;
   width: 210px;
   padding: 30px 0 40px 0;
+  text-align: center;
 }
 main .commander span {
   padding: 10px 40px;
@@ -159,7 +200,6 @@ footer {
 footer a {
   color: white;
   padding: 20px;
-  text-align: center;
   font-family: Shrikhand, "cursive", sans-serif;
 }
 footer ul {
@@ -175,8 +215,19 @@ footer ul li .fa-solid {
 footer ul li a {
   text-decoration: none;
   color: white;
+  font-family: "Roboto", sans-serif;
+  padding: 0;
 }
 
+@media screen and (min-width: 481px) {
+  footer a {
+    text-align: center;
+  }
+  footer ul {
+    display: flex;
+    justify-content: space-around;
+  }
+}
 @media screen and (min-width: 1025px) {
   .img_header img {
     max-height: 500px;
@@ -184,18 +235,18 @@ footer ul li a {
     object-fit: cover;
     width: 100%;
   }
-  section {
+  main {
     top: -40px;
   }
-  section .menu {
+  main .menu {
     flex-direction: row;
     justify-content: space-around;
   }
-  section .menu .card_menu {
+  main .menu .card_menu {
     margin-bottom: 20px;
     width: 350px;
   }
-  footer h2 {
+  footer a {
     text-align: center;
   }
   footer ul {
