--- a/css/style.css
+++ b/css/style.css
@@ -316,7 +316,6 @@ footer {
 footer a {
   color: white;
   padding: 20px;
-  text-align: center;
   font-family: Shrikhand, "cursive", sans-serif;
 }
 footer ul {
@@ -332,6 +331,8 @@ footer ul li .fa-solid {
 footer ul li a {
   text-decoration: none;
   color: white;
+  font-family: "Roboto", sans-serif;
+  padding: 0;
 }
 
 @media screen and (min-width: 481px) {
@@ -347,7 +348,7 @@ footer ul li a {
     display: flex;
     justify-content: center;
   }
-  footer h2 {
+  footer a {
     text-align: center;
   }
   footer ul {
@@ -377,7 +378,7 @@ footer ul li a {
   .contenaire_fonction span {
     font-size: 16px;
   }
-  footer h2 {
+  footer a {
     text-align: center;
   }
   footer ul {
